--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
   cloud_firestore: ^4.15.9
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
