--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^4.15.9
   cached_network_image: ^3.3.1
   flutter_launcher_icons: ^0.14.3
+  connectivity_plus: ^5.0.2
 
 dev_dependencies:
   flutter_test:
