--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_launcher_icons: ^0.14.3
   connectivity_plus: ^5.0.2
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
